fixed navbar z-index

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -44,6 +44,7 @@ html{
   left:0;
   background-color:#000;
   width:100%;
+  z-index:10;
   //border-bottom: 1px solid #e5e5e5;
 }
 
